# hurdcog

./: .gitignore  0.gitignore  9P_IMPLEMENTATION.md  AUTOGNOSIS - THE THEORY OF HIERARCHICAL SELF-IMAGE BUILDING SYSTEMS.txt  CLEANUP_ACTION_ITEMS.md  CLONE_ISSUES_ANALYSIS.md  COGNITIVE_FUSION_REACTOR_COMPLETE.md  COGNITIVE_FUSION_REACTOR_SYNTHESIS_COMPLETE.md  CONSOLIDATED_README.md  CONTRIBUTING.md  DEVELOPMENT_PATHWAYS.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  ECMA262_INTEGRATION_SUMMARY.md  EPIC_28_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FUSION_REACTOR_QUICK_START.md  GNU_HURD_ISSUES_RESOLUTION_SUMMARY.md  HURD_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  MANUAL_MERGE_GUIDE.md  MANUAL_MERGE_IMPLEMENTATION.md  MERGE_QUICK_REFERENCE.md  Makeconf  Makefile  OPENCOG_IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_ECAN_COMPLETION_SUMMARY.md  PHASE3_BUILD_ORCHESTRATION_SUMMARY.md  PHASE5_COMPLETION_REPORT.md  PHASE5_DOCUMENTATION_QUALITY_REPORT.md  PHASE5_FINAL_SUMMARY.md  PHASE5_META_COGNITION_COMPLETION.md  PHASE5_VISUAL_SUMMARY.md  PHASE6_COMPLETION_REPORT.md  PHASE6_FINAL_SUMMARY.txt  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE6_VALIDATION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_READINESS.md  (+39 more)
.github/: README (40).md  README1.md  issue-ai.md
9pfs/: 9pfs.c  9pfs.h  Makefile  netfs.c  node.c  ops.c
acpi/: acpi-ops.c  main.c  mig-mutate.h
auth/: mig-mutate.h
boot/: boot.c  mig-mutate.h
cogkernel/: COGNITIVE_OPERATIONS_INTERFACE.md  DASHBOARD_IMPLEMENTATION_REPORT.md  HURD_RESOURCE_MANAGEMENT_ECAN_SOLUTION.md  MASTER_CONTROL_DASHBOARD.md  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_PRODUCTION_READY.md  PHASE2_ECAN_IMPLEMENTATION.md  PHASE2_MICROKERNEL_INTEGRATION.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_SECURITY_IMPLEMENTATION.md  README.md  agent-communication.scm  agents.scm  atomspace.scm  attention.scm  bootstrap-test.scm  cognitive-grip.scm  cognitive-interface.scm  cognitive-operations-demo.scm  cognitive-primitives.scm  comprehensive-test.scm  core.scm  darwincore.scm  demo-phase5-meta-cognition.sh  demo-security-framework.scm  demo.scm  distributed-agent-framework-demo.sh  distributed-agent-framework.scm  distributed-communication-demo.sh  enhanced-workflow-demo.scm  full-integration-test.scm  fusion-reactor-dashboard.html  fusion-reactor-server.py  generate-flowcharts.scm  hurd-atomspace-bridge-stub.c  hurd-atomspace-bridge-stub.h  (+60 more)
cogkernel/embodiment/ros/: CMakeLists.txt  cognitive_planner.py  package.xml
console/: display.c
console-client/: Makefile  fb.c  ncursesw.c  pc-kbd.c  pc-mouse.c  timer.c  trans.c  vga-support.c  vga-support.h  vga.c
daemons/: console-run.c  runsystem.sh
devnode/: mig-mutate.h
docs/: A Critique of the GNU Hurd Multi-server Operating System.md  AGI_OS_OVERVIEW.md  ARCHITECTURE.md  COGNITIVE_SERVICES_API.md  Cognitive_Workbench_Technical_Architecture.md  Compiler_Explorer_Integration_Analysis.md  Compiler_Explorer_Integration_Summary.md  DEVELOPMENT_PATHWAYS.md  ECAN_RESOURCE_ALLOCATORS.md  Expanded Comparative Analysis_ OpenCog Ecosystem vs GNU Packages.md  GNU Hurd Open Issues Analysis.md  GNU Hurd.md  GNU Package Blurbs_- GNU Project - Free Software Foundation.md  GNU Packages Comprehensive Analysis.md  GUIX_INTEGRATION_COMPLETION.md  Hurd Reference Manual_ Table of Contents.md  HurdCog MVP GNU Guix v2.md  HurdCog_Compiler_Explorer_Roadmap.md  Kokkos_Repository_References.md  OPENCOG_HURD_INTEGRATION.md  Open Issues (1).md  OpenCog vs GNU Packages_ Comprehensive Analysis Summary.md  README.md  SingularityNET Repositories Analysis.md  TODO-ES (1).md  TODO-OC (1).md  Towards a New Strategy of OS Design, an architectural overview_by Thomas Bushnell, BSG..md  Updated Cognitive Micro-Kernel Evaluation_ Comprehensive OpenCog Ecosystem Analysis.md  comparative_analysis.csv  comparison_matrix_data.json  documentation (1).md  expanded_comparison_matrix_data.json  gnu mig.md  gnu.md  gnumach.md  hurd.md  mailing lists.md  microkernel.md  mig.md  ng.md  (+1 more)
eth-multiplexer/: mig-mutate.h  multiplexer.c
ext2fs/: balloc.c  dir.c  ext2fs.h  getblk.c  hyper.c  ialloc.c  inode.c  pager.c  truncate.c
fatfs/: fat.c  inode.c  pager.c
guile-llama-cpp/: AUTHORS  License  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  configure  configure.ac  guix.scm  pre-inst-env.in
guile-llama-cpp/docs/: ECMA262_INTEGRATION.md
guile-llama-cpp/examples/: comprehensive-test.js  ecma262-llm-example.js
guile-llama-cpp/scripts/: chat.scm  ecma262-bridge.scm  init_common.scm  simple.scm  tokenize.scm  utils.scm
guile-llama-cpp/src/: Makefile.am  Makefile.in  ecma262.scm  guile_typemap.i  llama.i  llama_c_header.h  llama_wrap.cxx  notes.txt  test-ecma262.scm
guile-llama-cpp/tools/: indent.el
guix-build-system/: README.md  cognitive-operations-interface.scm  orchestration.scm
hurd/: Makefile  default_pager.defs  io.defs
hurd-ecosystem/: NETWORK_STATUS.md
lib9p/: 9p-auth.c  9p-client.c  9p-internal.h  9p-namespace.c  9p-protocol.c  9p-server.c  9p-test  9p-test.c  9p.h  Makefile  namespace-demo  namespace-demo.c
libcons/: init-loop.c
libdiskfs/: boot-start.c  dir-renamed.c  disk-pager.c  diskfs-pager.h  file-get-trans.c  file-getfh.c  fsmutations.h  init-first.c  io-prenotify.c  io-read.c  io-write.c  node-drop.c  sync-interval.c
libirqhelp/: irqhelp.c
libmachdev/: ds_routines.c  mig-mutate.h  trivfs_server.c
libnetfs/: init-loop.c  mutations.h
libpager/: demuxer.c  mig-mutate.h
libpipe/: pipe.c  pipe.h  pq.c
libports/: mig-mutate.h
libshouldbeinlibc/: lcm.c  maptime.h
libtrivfs/: mig-mutate.h
lwip/: lwip-util.c  mig-mutate.h
mach-defpager/: default_pager.c  default_pager.h  main.c  mig-mutate.h  setup.c
mig/: cpu.sym  type.c
nfs/: cache.c  main.c  mount.c  nfs-spec.h  nfs.c  nfs.h  ops.c  rpc.c
nfsd/: loop.c
pci-arbiter/: main.c  mig-mutate.h  netfs_impl.c
performance/: Makefile  README.md  kokkos-hurd-demo  performance-optimizer-simple.cc  (+6 more)
(+218 files in other folders)
